--- a/lib/globals.css
+++ b/lib/globals.css
@@ -1,3 +1,30 @@
 @tailwind base;
 @tailwind components;
 @tailwind utilities;
+
+@layer base {
+  h1 {
+    @apply font-bold 
+    text-5xl;
+  }
+  h2 {
+    @apply font-semibold
+    text-4xl;
+  }
+  h3 {
+    @apply font-semibold
+    text-2xl;
+  }
+  h4 {
+    @apply font-semibold
+    text-xl;
+  }
+  h5 {
+    @apply font-semibold
+    text-base;
+  }
+  h6 {
+    @apply font-semibold
+    text-sm;
+  }
+}
